--- a/client/client/package.json
+++ b/client/client/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.1.1",
     "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "react": "^18.1.0",
