--- a/client/client/package.json
+++ b/client/client/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.1.1",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
