--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 JWT_SECRET_KEY=someKey
-MONGO_DEV_URI=mongodb://localhost:27017/
-MONGO_PRO_URI=mongodb_srv://atlas.com/
+MONGO_PRO_URI=mongodb+srv://onepiece:123@onepiece.tkymu.mongodb.net/?retryWrites=true&w=majority
