--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-JWT_SECRET_KEY = someKey
-MONGO_DEV_URI = mongodb+srv://onepiece:123@cluster0.tkymu.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET_KEY=someKey
+MONGO_PRO_URI= "mongodb+srv://onepiece:<password>@cluster0.tkymu.mongodb.net/?retryWrites=true&w=majority"
