--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 JWT_SECRET_KEY=someKey
-MONGO_DEV_URI= "mongodb+srv://onepiece:123@cluster0.wn8xh.mongodb.net/?retryWrites=true&w=majority"
+MONGO_DEV_URI= mongodb+srv://onepiece:123@cluster0.wn8xh.mongodb.net/?retryWrites=true&w=majority
